@@ -28,6 +28,15 @@
                 <button>Limited time</button>
             </div>
             <div class="flex banners-wrapper">
+                <div class="真理的壁影 banner-button">
+                    <img src="images/banners/Seeker_In_The_Cave_Banner.webp">
+                </div>
+                <div class="一克“好奇心”-2024-03-26 banner-button">
+                    <img src="images/banners/One_Gram_of_Curiosity_Banner.webp">
+                </div>
+                <div class="牧羊犬如是说-2024-03-12 banner-button">
+                    <img src="images/banners/Thus_Spoke_the_Border_Collie_Banner.webp">
+                </div>
                 <div class="现象未漫及处 banner-button">
                     <img src="images/banners/Beyond_the_World_of_Matters_Banner.webp">
                 </div>
@@ -64,7 +73,7 @@
                 <div class="星的栖居 banner-button">
                     <img src="images/banners/Where_the_Star_Alighted_Banner.webp">
                 </div>
-                <div class="牧羊犬如是说 banner-button">
+                <div class="牧羊犬如是说-2023-11-23 banner-button">
                     <img src="images/banners/Thus_Spoke_the_Border_Collie_Banner.webp">
                 </div>
                 <div class="自由摇摆 banner-button">
@@ -76,7 +85,7 @@
                 <div class="深林的絮语 banner-button">
                     <img src="images/banners/Whisper_of_the_Woods_Banner.webp">
                 </div>
-                <div class="一克“好奇心” banner-button">
+                <div class="一克“好奇心”-2023-10-26 banner-button">
                     <img src="images/banners/One_Gram_of_Curiosity_Banner.webp">
                 </div>
                 <div class="剑与盔的嘶鸣 banner-button">
